--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,23 @@ body {
   font-family: "Lato", sans-serif;
   color: #333333;
 }
+
+/* Reviews section */
+
+.customScrollbar::-webkit-scrollbar {
+  width: 1px;
+  height: 4px;
+}
+
+.customScrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb {
+  background-color: #333333;
+  border-radius: 3px;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #333333;
+}
